crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__method__arity.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/method/arity.lox
---
success: true
exit_code: 0
----- stdout -----
no args
1
3
6
10
15
21
28
36

----- stderr -----
