crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__method__not_found.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/method/not_found.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: undefined property `unknown` of value `<Foo instance at [POINTER]>`
   ╭─[craftinginterpreters/test/method/not_found.lox:3:1]
   │
 3 │ Foo().unknown(); // expect runtime error: Undefined property 'unknown'.
   │ ───── ───────  
   │                 
   │                
   │                 
───╯
