crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__method__print_bound_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/method/print_bound_method.lox
---
success: true
exit_code: 0
----- stdout -----
<bound method method of <Foo instance at [POINTER]>>

----- stderr -----
